Corrected and adjusted spacing in landing page info

--- a/adaTree/static/css/style.css
+++ b/adaTree/static/css/style.css
@@ -5,13 +5,13 @@
     HOME PAGE
 ----------------------------------------------------- */
 #intro {
-  /* margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 50px;
-  margin-bottom: 20px; */
+  /* margin-left: 15px;
+  margin-right: 30px; */
+  margin-top: -5px;
+  margin-bottom: 20px;
 }
 
-#intro h2, h4{
+#intro h1, h2, h4{
   color: gray;
 }
 
@@ -21,12 +21,12 @@
 
 .content-divider {
   height: 1px;
-  border-bottom: 1px dashed transparent;
-  margin: 40px 0;
+  border-bottom: 1px dashed gray;
+  margin: 140px 0px;
 }
 
 #tutorial {
-  margin: 20px 10px;
+  margin: 20px 22px;
   /* animation: fade 2s; */
   /* background-color: #22222D; */
   background-color: #383842;
@@ -47,19 +47,27 @@
   animation: fade 2s;
 }
 
+#tutorial-heading {
+  font-size: 2em;
+  font-family: 'Poppins', sans-serif;
+}
+
 #general-info {
   color: gray;
   display: inline-block;
   padding: 20px;
-  margin-top: 10px;
-  margin-bottom: 20px;
+  /* margin-top: 5px; */
+  margin-bottom: 70px;
   text-align: justify;
 }
 
-#how-to, #mission, #about, #privacy {
-
+#family-tree-features {
+  margin-top: 30px;
 }
 
+.home-info {
+  margin-bottom: 60px;
+}
 
 /* ---------------------------------------------------
     GLOW
